maze.pledge.PledgeMaze.scala.error
Erreur de compilation :
PledgeMaze:17: error: reassignment to val
      virage=virage-1
            ^PledgeMaze:20: error: type mismatch;
 found   : Unit
 required: Double
      avance()
            ^PledgeMaze:24: error: reassignment to val
    virage=virage+1
          ^