maze.pledge.PledgeMaze.scala.code
override def run() {
  var virage:Double = 0
 	while (!estFaceMur())
  	avance()
  while (!estSurBiscuit())
  	keepHandOnSideWall(virage)
  prendBiscuit()
}

def keepHandOnSideWall(virage:Double):Double = {
  gauche()
  if (estFaceMur()) {
  	droite()
    if (estFaceMur()) {
    	droite()
    	virage=virage-1
    }
    else
    	avance()
  }
  else {
  	avance()
  	virage=virage+1
  }
}